--- a/PerformanceApplication/Views/BandArtist/create.cshtml
+++ b/PerformanceApplication/Views/BandArtist/create.cshtml
@@ -7,15 +7,19 @@
 
 <h2>create band or artist</h2>
 
-
-
-<form action="CreateSave" method="post">
-    <input type="text" name="name" placeholder="Name" runat="server"/>
-    <input type="text" name="description" placeholder="Description" runat="server"/>
-    <br />
+<form action="@Url.Action("CreateSave", "BandArtist")" method="post">
+    <div class="form-group">
+        <label>Name</label>
+        <br />
+        <input type="text" name="name" placeholder="Name" runat="server" />
+    </div>
+    <div class="form-group">
+        <label>Description</label>
+        <br />
+        <input type="text" name="description" placeholder="description" runat="server" />
+    </div>
     <input type="submit" value="create" />
 </form>
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
