--- a/PerformanceApplication/Views/BandArtist/Index.cshtml
+++ b/PerformanceApplication/Views/BandArtist/Index.cshtml
@@ -23,8 +23,8 @@
             <td>@row["Name"]</td>
             <td>@row["Description"]</td>
             <td>@Html.ActionLink("Edit", "Edit", new { @id = @row["Id"] })</td>
-            <td>@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })</td>
+            <td>@Html.ActionLink("Details", "Details", new { @id = @row["Id"] })</td>
+            <td>@Html.ActionLink("Delete", "Delete", new { @id = @row["Id"] })</td>
 
         </tr>
     }
