--- a/PerformanceApplication/Views/Stage/Create.cshtml
+++ b/PerformanceApplication/Views/Stage/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>create band or artist</h2>
+<h2>create Stage</h2>
 
 <form action="@Url.Action("CreateSave", "Stage")" method="post">
     <div class="form-group">
