--- a/PerformanceApplication/Views/Performance/Index.cshtml
+++ b/PerformanceApplication/Views/Performance/Index.cshtml
@@ -1,24 +1,31 @@
-﻿@{
+﻿@using System.Data
+@model DataSet
+
+@{
     ViewBag.Title = "Performances";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Performances</h2>
+<h2>List of performances</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th></th>
+        <th>Name Artist or Band</th>
+        <th>Description</th>
+        <th colspan="3">Actions</th>
     </tr>
+    @foreach (DataRow row in Model.Tables[0].Rows)
+    {
+        <tr>
+            <td>@row["Name"]</td>
+            <td>@row["Description"]</td>
+            <td>@Html.ActionLink("Edit", "Edit", new { @id = @row["Id"] })</td>
+            <td>@Html.ActionLink("Details", "Details", new { @id = @row["Id"] })</td>
+            <td>@Html.ActionLink("Delete", "Delete", new { @id = @row["Id"] })</td>
 
-      <tr>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-
+        </tr>
+    }
 </table>
