--- a/PerformanceApplication/Views/Performance/Index.cshtml
+++ b/PerformanceApplication/Views/Performance/Index.cshtml
@@ -14,18 +14,22 @@
 <table class="table">
     <tr>
         <th>Name Artist or Band</th>
-        <th>Description</th>
+        <th>Startdate</th>
+        <th>Enddate</th>
+        <th>Stage</th>
         <th colspan="3">Actions</th>
     </tr>
     @foreach (DataRow row in Model.Tables[0].Rows)
     {
-        <tr>
-            <td>@row["Name"]</td>
-            <td>@row["Description"]</td>
-            <td>@Html.ActionLink("Edit", "Edit", new { @id = @row["Id"] })</td>
-            <td>@Html.ActionLink("Details", "Details", new { @id = @row["Id"] })</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { @id = @row["Id"] })</td>
+<tr>
+    <td>@row[1]</td>
+    <td>@row[2]</td>
+    <td>@row[3]</td>
+    <td>@row[4]</td>
+    <td>@Html.ActionLink("Edit", "Edit", new { @id = @row["Id"] })</td>
+    <td>@Html.ActionLink("Details", "Details", new { @id = @row["Id"] })</td>
+    <td>@Html.ActionLink("Delete", "Delete", new { @id = @row["Id"] })</td>
 
-        </tr>
+</tr>
     }
 </table>
