--- a/PerformanceApplication/Views/Performance/Create.cshtml
+++ b/PerformanceApplication/Views/Performance/Create.cshtml
@@ -36,14 +36,11 @@
     <div class="form-group">
         <label>Startdate</label>
         <br />
-        <input type="date" name="start_date" placeholder="startdate" runat="server" />
-        <input type="time" name="start_time" placeholder="starttime" runat="server" />
-    </div>
+        <input type="datetime-local" name="start_date" placeholder="startdate" runat="server" />    </div>
     <div class="form-group">
         <label>Enddate</label>
         <br />
-        <input type="date" name="end_date" placeholder="enddate" runat="server" />
-        <input type="time" name="end_time" placeholder="endtime" runat="server" />
+        <input type="datetime-local" name="end_date" placeholder="enddate" runat="server" />
 
     </div>
     <input type="submit" value="create" />
