--- a/PerformanceApplication/Views/Performance/Edit.cshtml
+++ b/PerformanceApplication/Views/Performance/Edit.cshtml
@@ -40,13 +40,13 @@
         <div class="form-group">
             <label>startdate</label>
             <br />
-            <input type="datetime-local" name="start_date" placeholder="startdate" value="@row["start_date"]" runat="server" />
+            <input type="datetime" name="start_date" placeholder="@row["start_date"]" value="@row["start_date"]" runat="server" id="btn-start"  onclick="ChangeTypeStart()" onblur="LeaveStart()"/>
 
         </div>
         <div class="form-group">
             <label>enddate</label>
             <br />
-            <input type="datetime-local" name="end_date" placeholder="enddate" value="@row["end_date"]" runat="server" />
+            <input type="text" name="end_date" placeholder="@row["end_date"]" value="@row["end_date"]" runat="server" id="btn-end"  onclick="ChangeTypeEnd()" onblur="LeaveEnd()"/>
         </div>
     }
     <input type="submit" value="Save" />
