--- a/PerformanceApplication/Content/Site.css
+++ b/PerformanceApplication/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:antiquewhite;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,20 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+#layout{
+    border:solid;
+    background-color:blanchedalmond;
+    text-align:center;
+}
+
+#selection{
+    background-color:burlywood;
+    margin:10px;
+    padding:10px;
+}
+
+#date{
+    text-decoration: underline;
 }
