--- a/PerformanceApplication/Views/Performance/Edit.cshtml
+++ b/PerformanceApplication/Views/Performance/Edit.cshtml
@@ -8,7 +8,12 @@
 }
 
 <h2>Edit performance</h2>
-
+<div class="alert alert-warning">
+    <strong>Warning!</strong>
+    Cannot make a performance with the same start and enddate on a stage, that alreay exists
+    <br />
+    <strong>@ViewData["error"]</strong>
+</div>
 <form action="@Url.Action("EditSave", "Performance")" method="post">
     @foreach (DataRow row in Model[0].Tables[0].Rows)
     {
