--- a/PerformanceApplication/Views/Performance/Index.cshtml
+++ b/PerformanceApplication/Views/Performance/Index.cshtml
@@ -9,9 +9,11 @@
 <h2>List of performances</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
-    /
-    @Html.ActionLink("View as selection", "PerformanceSelection",  new { @direction = "empty" })
+    @Html.ActionLink("Create New", "Create")/
+    @if(Model.Tables[0].Rows.Count > 0)
+    { 
+      @Html.ActionLink("View as selection", "PerformanceSelection",  new { @direction = "empty" })
+    }
 </p>
 <div id="layout">
     @foreach (DataRow row in Model.Tables[0].Rows)
